# Utopia

./: .gitignore  ACHIEVEMENT_SHOWCASE.md  CONTRIBUTING.md  CURRENT_STATUS.md  DEMO.md  FINAL_STATUS.md  GITHUB_PREPARATION.md  GITHUB_README.md  HISTORIC_ACHIEVEMENT.md  IMPROVEMENT_PROGRESS.md  ISSUES_FIXED_REPORT.md  LANGUAGE_SUPPORT.md  LICENSE  MAJOR_FIXES_DEMO.uto  PERFORMANCE_GUIDE.md  PHASE_3_ENTERPRISE_COMPLETE.md  PHASE_4_ADVANCED_COMPLETE.md  README.md  TESTING_SUMMARY.md  UPGRADE_COMPLETE.md  UPGRADE_ROADMAP.md  UTOPIA_ACHIEVEMENT_REPORT.md  UTOPIA_FINAL_REPORT.md  WORKING_DEMO.uto  advanced_features_working_demo.uto  advanced_generics_demo.uto  assignment_test.uto  benchmark_results.txt  correct_test.uto  debug_colon.uto  debug_colon2.uto  debug_double_colon.uto  debug_for_loop.uto  debug_lang_block.uto  debug_lexer_test.uto  debug_minimal.uto  debug_safe_colon.uto  demo.ada  demo.dfm  demo.wasm  (+15 more)
benchmarks/: bench_nim  bench_swift
debug_output/: basic_syntax_test_javascript  basic_syntax_test_rust
docs/: README.md  api.md  cli-reference.md  examples.md  language-reference.md  performance.md  syntax.md  testing-guide.md  utopia-language-guide.md  utopia-syntax.md
examples/: README.md  ada_test.uto  advanced_multi_language_demo.uto  bash_test.uto  basic_example.uto  basic_multi_lang.uto  basic_showcase.uto  basic_test.uto  cobol_test.uto  cross_lang_test.uto  cross_language_demo.uto  cross_language_showcase.uto  cross_test.uto  crystal_test.uto  csharp_test.uto  dart_test.uto  data_processing.uto  data_science_pipeline.uto  delphi_test.uto  fortran_test.uto  game_development.uto  haskell_test.uto  julia_test.uto  kotlin_test.uto  lisp_test.uto  lua_test.uto  matlab_test.uto  multi_lang_showcase.uto  nim_test.uto  objective_c_test.uto  performance_showcase.uto  perl_test.uto  php_test.uto  production_multi_lang_demo.uto  prolog_test.uto  r_test.uto  ruby_test.uto  scala_test.uto  simple_calculator.uto  simple_cross_demo.uto  (+17 more)
language_outputs/: test_ada  test_assembly  test_bash  test_basic  test_c  (+41 more)
utopia-rs/: Cargo.toml
utopia-rs/src/: ast.rs  cli.rs  config.rs  diagnostics.rs  lexer.rs  lib.rs  main.rs  optimizer.rs  parser.rs  reverse.rs  server.rs  transformers.rs  transformers.rs.bak  types.rs  utils.rs
(+15 files in other folders)
